login function working properly
